# loop-engineering-harness

./: .env.example  .gitignore  README.md  generate_templates.py  pyproject.toml  requirements.txt
examples/: prompts.md
harness-rs/: Cargo.toml
harness-rs/src/: engine.rs  external_loop.rs  main.rs  providers.rs  runtime.rs  spec.rs
harness_builder/: cli.py  export.py  tui.py
harness_builder/builder/: architect.py  banner.py  playbooks.py  scaffold.py  verify.py
harness_builder/core/: anatomy.py  auth.py  external_loop.py  loop.py  memory.py  rag.py  ralph.py  registry.py  spec.py  tools.py
harness_builder/mcp/: client.py  server.py
harness_builder/ops/: evaluate.py  trace.py
harness_builder/providers/: api.py
harness_builder/runtime/: orchestrator.py
templates/code_review/: harness.yaml
templates/code_review/skills/: review_method.md
templates/data_pipeline/: harness.yaml
templates/data_pipeline/skills/: data_eng_principles.md
templates/deep_research/: harness.yaml
templates/deep_research/memory/: episodic.db
templates/deep_research/skills/: research_playbook.md
templates/marketing_campaign/: harness.yaml
templates/marketing_campaign/skills/: campaign_craft.md
templates/tech_docs/: harness.yaml
templates/website_dev/: harness.yaml
templates/webtoon_production/: harness.yaml
templates/youtube_content/: harness.yaml
tests/: conftest.py  test_auth.py  test_autonomous.py  test_generated_tools.py  test_mcp_and_hooks.py  test_playbooks.py  test_scaffold.py  test_spec.py  test_streaming.py  test_templates.py
(+5 files in other folders)
