[package]
name = "harness"
version = "0.1.0"
edition = "2021"
description = "Rust runtime for harness-builder: prompt -> domain-specific AI agent harness"

[dependencies]
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
serde_yaml = "=0.9.34"
clap = { version = "=4.4.18", features = ["derive"] }
ureq = { version = "=2.9.7", features = ["json"] }
regex = "=1.10.4"
chrono = "=0.4.38"
anyhow = "=1.0.86"
libc = "=0.2.155"

[profile.release]
lto = true
strip = true
